Remove unused bg_dialog_* drawable

--- a/app/src/main/res/drawable/bg_dialog.xml
+++ b/app/src/main/res/drawable/bg_dialog.xml
@@ -3,9 +3,7 @@
        xmlns:tools="http://schemas.android.com/tools"
        android:shape="rectangle">
 
-    <!--  Separate drawable related with attr bug on preLollipop versions.  -->
-
-    <solid android:color="@color/primary_dark"/>
+    <solid android:color="?attr/clPrimary" />
     <corners android:radius="@dimen/radius_4dp"/>
     <size tools:height="@dimen/icon_48dp" tools:width="@dimen/icon_128dp"/>
 
