--- a/app/src/main/res/values-v27/styles_screen.xml
+++ b/app/src/main/res/values-v27/styles_screen.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <!--  Set colors of system UI not work from XML. This is for best understanding.  -->
-    <style name="App.Light.UI">
+    <style name="App.Screen.Light.Main">
         <item name="colorPrimaryDark">?attr/clPrimary</item>
 
         <item name="android:windowBackground">?attr/clBackgroundWindow</item>
@@ -15,7 +15,7 @@
     </style>
 
     <!--  Set colors of system UI not work from XML. This is for best understanding.  -->
-    <style name="App.Dark.UI">
+    <style name="App.Screen.Dark.Main">
         <item name="android:windowBackground">?attr/clBackgroundWindow</item>
 
         <item name="android:windowLightStatusBar">false</item>
@@ -25,17 +25,19 @@
         <item name="android:navigationBarDividerColor">?attr/clDivider</item>
     </style>
 
+    <!-- -->
+
     <!--  Set colors of system UI not work from XML. This is for best understanding.  -->
-    <style name="App.Splash" parent="App.Dark.UI">
+    <style name="App.Screen.Splash" parent="App.Screen.Dark">
         <item name="android:windowBackground">@drawable/bg_splash_screen</item>
 
-        <item name="statusBarBackground">@android:color/transparent</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:navigationBarColor">@android:color/transparent</item>
         <item name="android:navigationBarDividerColor">@android:color/transparent</item>
     </style>
 
     <!--  Set colors of system UI not work from XML. This is for best understanding.  -->
-    <style name="App.Intro" parent="App.Splash">
+    <style name="App.Screen.Intro" parent="App.Screen.Dark">
         <item name="android:windowBackground">?attr/colorPrimaryDark</item>
 
         <item name="android:statusBarColor">@android:color/transparent</item>
