--- a/app/src/main/res/values/styles_app.xml
+++ b/app/src/main/res/values/styles_app.xml
@@ -1,186 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="App"/>
-
-    <style name="App.Light" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="clNavigationBar">@color/navigation_bar_light</item>
-        <item name="clNavigationBarDivider">@color/navigation_bar_divider_light</item>
-
-        <item name="clAccent">@color/accent_light</item>
-        <item name="clAccentRipple">@color/accent_ripple_light</item>
-
-        <item name="clPrimary">@color/primary_light</item>
-
-        <item name="clDivider">@color/divider_light</item>
-        <item name="clBackgroundWindow">@color/background_window_light</item>
-        <item name="clBackgroundView">@color/background_view_light</item>
-        <item name="clBackgroundEnter">@color/background_enter_light</item>
-
-        <item name="clContent">@color/content_light</item>
-        <item name="clContentSecond">@color/content_second_light</item>
-        <item name="clContrast">@color/contrast_light</item>
-        <item name="clDisable">@color/disable_light</item>
-
-        <item name="clCardIndicator">?attr/clContent</item>
-
-        <item name="colorPrimary">?attr/clPrimary</item>
-        <item name="colorPrimaryDark">?attr/clContentSecond</item>
-        <item name="colorAccent">?attr/clAccent</item>
-
-        <item name="styleToolbar">@style/Toolbar.Light</item>
-        <item name="themePopup">@style/PopupTheme.Light</item>
-        <item name="styleFab">@style/Fab.Light</item>
-        <item name="styleSheetAdd">@style/SheetDialog</item>
-        <item name="styleProgressHorizontal">@style/ProgressBar.Horizontal</item>
-
-        <item name="alertDialogStyle">@style/Alert.Light</item>
-        <item name="alertDialogTheme">@style/Alert.Light</item>
-
-        <item name="bottomSheetDialogTheme">@style/BottomSheetTheme.Light</item>
-
-        <item name="snackbarStyle">@style/MaterialSnackbarTheme</item>
-    </style>
-
-    <!--  Set colors of system UI not work from XML. This is for best understanding.  -->
-    <style name="App.Light.UI">
-        <item name="android:windowBackground">?attr/clBackgroundWindow</item>
-
-        <item name="android:navigationBarColor">?attr/colorPrimaryDark</item>
-    </style>
-
-    <style name="App.Dark" parent="Theme.AppCompat.NoActionBar">
-        <item name="clNavigationBar">@color/navigation_bar_dark</item>
-        <item name="clNavigationBarDivider">@color/navigation_bar_divider_dark</item>
-
-        <item name="clAccent">@color/accent_dark</item>
-        <item name="clAccentRipple">@color/accent_ripple_dark</item>
-
-        <item name="clPrimary">@color/primary_dark</item>
-
-        <item name="clDivider">@color/divider_dark</item>
-        <item name="clBackgroundWindow">@color/background_window_dark</item>
-        <item name="clBackgroundView">@color/background_view_dark</item>
-        <item name="clBackgroundEnter">@color/background_enter_dark</item>
-
-        <item name="clContent">@color/content_dark</item>
-        <item name="clContentSecond">@color/content_second_dark</item>
-        <item name="clContrast">@color/contrast_dark</item>
-        <item name="clDisable">@color/disable_dark</item>
-
-        <item name="clCardIndicator">?attr/clAccent</item>
-
-        <item name="colorPrimary">?attr/clPrimary</item>
-        <item name="colorPrimaryDark">?attr/clPrimary</item>
-        <item name="colorAccent">?attr/clAccent</item>
-
-        <item name="styleToolbar">@style/Toolbar.Dark</item>
-        <item name="themePopup">@style/PopupTheme.Dark</item>
-        <item name="styleFab">@style/Fab.Dark</item>
-        <item name="styleSheetAdd">@style/SheetDialog</item>
-        <item name="styleProgressHorizontal">@style/ProgressBar.Horizontal</item>
-
-        <item name="alertDialogStyle">@style/Alert.Dark</item>
-        <item name="alertDialogTheme">@style/Alert.Dark</item>
-
-        <item name="bottomSheetDialogTheme">@style/BottomSheetTheme.Dark</item>
-
-        <item name="snackbarStyle">@style/MaterialSnackbarTheme</item>
-    </style>
-
-    <!--  Set colors of system UI not work from XML. This is for best understanding.  -->
-    <style name="App.Dark.UI">
-        <item name="android:windowBackground">?attr/clBackgroundWindow</item>
-
-        <item name="android:navigationBarColor">?attr/colorPrimary</item>
-    </style>
-
-    <!--  Set colors of system UI not work from XML. This is for best understanding.  -->
-    <style name="App.Splash" parent="App.Dark.UI">
-        <item name="android:windowBackground">@drawable/bg_splash_screen</item>
-
-        <item name="statusBarBackground">@android:color/transparent</item>
-        <item name="android:navigationBarColor">@android:color/transparent</item>
-    </style>
-
-    <!--  Set colors of system UI not work from XML. This is for best understanding.  -->
-    <style name="App.Intro" parent="App.Splash">
-        <item name="android:windowBackground">?attr/colorPrimaryDark</item>
-
-        <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:navigationBarColor">@android:color/transparent</item>
-    </style>
-
-    <!-- -->
-
-    <style name="Alert.Light" parent="Theme.AppCompat.Light.Dialog.Alert">
-        <item name="colorAccent">?attr/clAccent</item>
-    </style>
-
-    <style name="Alert.Dark" parent="Theme.AppCompat.Dialog.Alert">
-        <item name="colorAccent">?attr/clAccent</item>
-    </style>
-
-    <style name="BottomSheetTheme.Light" parent="Theme.Design.Light.BottomSheetDialog">
-        <item name="bottomSheetStyle">@style/BottomSheetStyle</item>
-    </style>
-
-    <style name="BottomSheetTheme.Dark" parent="Theme.Design.BottomSheetDialog">
-        <item name="bottomSheetStyle">@style/BottomSheetStyle</item>
-    </style>
-
-    <style name="BottomSheetStyle" parent="Widget.Design.BottomSheet.Modal">
-        <item name="android:background">@android:color/transparent</item>
-    </style>
-
-    <style name="MaterialSnackbarTheme" parent="Widget.MaterialComponents.Snackbar" />
-
-    <style name="PopupTheme.Light" parent="ThemeOverlay.AppCompat.Light">
-        <item name="android:textColorPrimary">?attr/clContent</item>
-        <item name="android:textColorSecondary">?attr/clContent</item>
-        <item name="colorControlNormal">?attr/clContent</item>
-        <item name="actionMenuTextColor">?attr/clContent</item>
-    </style>
-
-    <style name="PopupTheme.Dark" parent="ThemeOverlay.AppCompat.Dark">
-        <item name="android:textColorPrimary">?attr/clContent</item>
-        <item name="android:textColorSecondary">?attr/clContent</item>
-        <item name="colorControlNormal">?attr/clContent</item>
-        <item name="actionMenuTextColor">?attr/clContent</item>
-    </style>
-
-    <!-- -->
-
-    <style name="SheetDialog">
-        <item name="android:background">@drawable/bg_dialog</item>
-    </style>
-
-    <!-- -->
-
-    <style name="Toolbar">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">?attr/actionBarSize</item>
-        <item name="android:background">?attr/colorPrimary</item>
-    </style>
-
-    <style name="Toolbar.Light">
-        <item name="android:theme">@style/PopupTheme.Light</item>
-    </style>
-
-    <style name="Toolbar.Dark">
-        <item name="android:theme">@style/PopupTheme.Dark</item>
-    </style>
-
-    <style name="Fab.Light" parent="ThemeOverlay.AppCompat.Light">
-        <item name="android:tint">?attr/clBackgroundView</item>
-    </style>
-
-    <style name="Fab.Dark" parent="ThemeOverlay.AppCompat.Dark">
-        <item name="android:tint">?attr/clBackgroundView</item>
-    </style>
-
-    <style name="ProgressBar.Horizontal" parent="Widget.AppCompat.ProgressBar.Horizontal">
-        <item name="android:progressDrawable">@drawable/bg_progress</item>
-    </style>
+    <style name="App.Screen.DayNight" parent="App.Screen.Light.Main" />
 
 </resources>
