--- a/app/src/main/res/layout-night/item_note_roll.xml
+++ b/app/src/main/res/layout-night/item_note_roll.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
         <import type="android.view.View" />
+
+        <import type="sgtmelon.scriptum.domain.model.annotation.Theme" />
 
         <variable
             name="item"
@@ -15,8 +16,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/note_roll_parent_card"
         style="@style/Card"
-        app:noteColor='@{item.color}'
-        tools:cardBackgroundColor="@color/note_red_light">
+        app:cardBackgroundColor="?attr/clBackgroundView">
 
         <FrameLayout
             android:id="@+id/note_roll_click_container"
@@ -32,7 +32,8 @@
                     android:id="@+id/note_roll_color_view"
                     style="@style/Image.Color.Vertical.End"
                     android:importantForAccessibility="no"
-                    android:visibility="gone" />
+                    app:indicatorColor='@{item.color}'
+                    app:indicatorTheme='@{Theme.DARK}' />
 
             </LinearLayout>
 
