Refactor item_notification.xml for dayNight mode

--- a/app/src/main/res/layout-night/item_notification.xml
+++ b/app/src/main/res/layout-night/item_notification.xml
@@ -31,7 +31,7 @@
                 style="@style/Image.Color.Vertical.Start"
                 android:importantForAccessibility="no"
                 app:indicatorColor='@{item.note.color}'
-                app:indicatorTheme='@{Theme.LIGHT}'
+                app:indicatorTheme='@{Theme.DARK}'
                 tools:visibility="visible" />
 
             <include
