Refactor inc_toolbar_note.xml for dayNight mode + remove Theme from layout

--- a/app/src/main/res/layout-night/inc_toolbar_note.xml
+++ b/app/src/main/res/layout-night/inc_toolbar_note.xml
@@ -37,7 +37,7 @@
         <View
             android:id="@+id/toolbar_note_color_view"
             style="@style/Image.Color.Horizontal"
-            android:visibility="gone" />
+            tools:background="@color/note_red_dark" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
