--- a/app/src/main/res/layout/fragment_roll_note.xml
+++ b/app/src/main/res/layout/fragment_roll_note.xml
@@ -10,10 +10,6 @@
         <import type="android.view.View" />
 
         <variable
-            name="theme"
-            type="int" />
-
-        <variable
             name="menuCallback"
             type="sgtmelon.scriptum.presentation.screen.ui.callback.note.INoteMenu" />
 
@@ -60,8 +56,7 @@
             layout="@layout/inc_toolbar_note"
             app:isDataLoad='@{isDataLoad}'
             app:isEditMode='@{isEditMode}'
-            app:item='@{item}'
-            app:theme='@{theme}' />
+            app:item='@{item}' />
 
         <!-- Container for good performance on ItemTouchHelper.ACTION_STATE_DRAG over top bound. -->
         <FrameLayout
