--- a/app/src/main/res/layout-night/item_notification.xml
+++ b/app/src/main/res/layout-night/item_notification.xml
@@ -5,8 +5,6 @@
 
     <data>
 
-        <import type="sgtmelon.scriptum.domain.model.annotation.Theme" />
-
         <variable
             name="item"
             type="sgtmelon.scriptum.domain.model.item.NotificationItem" />
@@ -31,7 +29,7 @@
                 style="@style/Image.Color.Vertical.Start"
                 android:importantForAccessibility="no"
                 app:indicatorColor='@{item.note.color}'
-                app:indicatorTheme='@{Theme.DARK}'
+                app:isNight="true"
                 tools:visibility="visible" />
 
             <include
