--- a/app/src/main/res/values-ru/strings_preference.xml
+++ b/app/src/main/res/values-ru/strings_preference.xml
@@ -65,6 +65,7 @@
     <string-array name="pref_text_app_theme">
         <item>Светлая</item>
         <item>Тёмная</item>
+        <item>Системная</item>
     </string-array>
 
     <string-array name="pref_text_note_sort">
