--- a/app/src/main/res/values/strings_preference.xml
+++ b/app/src/main/res/values/strings_preference.xml
@@ -57,6 +57,7 @@
     <string-array name="pref_text_app_theme">
         <item>Light</item>
         <item>Dark</item>
+        <item>System</item>
     </string-array>
 
     <string-array name="pref_text_note_sort">
