--- a/app/src/main/res/values/styles_screen.xml
+++ b/app/src/main/res/values/styles_screen.xml
@@ -20,7 +20,7 @@
         <item name="clContrast">@color/contrast_light</item>
         <item name="clDisable">@color/disable_light</item>
 
-        <item name="clCardIndicator">?attr/clContent</item>
+        <item name="clIndicator">?attr/clContent</item>
 
         <item name="colorPrimary">?attr/clPrimary</item>
         <item name="colorPrimaryDark">?attr/clContentSecond</item>
@@ -64,7 +64,7 @@
         <item name="clContrast">@color/contrast_dark</item>
         <item name="clDisable">@color/disable_dark</item>
 
-        <item name="clCardIndicator">?attr/clAccent</item>
+        <item name="clIndicator">?attr/clAccent</item>
 
         <item name="colorPrimary">?attr/clPrimary</item>
         <item name="colorPrimaryDark">?attr/clPrimary</item>
