--- a/app/src/main/res/layout/view_sheet_repeat.xml
+++ b/app/src/main/res/layout/view_sheet_repeat.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom">
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@id/sheet_parent_container"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="bottom">
 
     <FrameLayout
-            android:id="@+id/repeat_container"
-            style="?attr/styleSheetAdd"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/layout_8dp">
+        android:id="@+id/repeat_container"
+        style="?attr/styleSheetAdd"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/layout_8dp">
 
         <com.google.android.material.navigation.NavigationView
-                android:id="@+id/repeat_navigation"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:theme="@style/NavigationView"
-                app:itemTextColor="?attr/clContent"
-                app:menu="@menu/sheet_repeat"/>
+            android:id="@+id/repeat_navigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:theme="@style/NavigationView"
+            app:itemTextColor="?attr/clContent"
+            app:menu="@menu/sheet_repeat" />
 
     </FrameLayout>
 
