--- a/app/src/main/res/layout-night/item_note_roll.xml
+++ b/app/src/main/res/layout-night/item_note_roll.xml
@@ -13,7 +13,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/note_roll_parent_card"
-        style="@style/Card"
+        style="@style/Card.Item"
         app:cardBackgroundColor="?attr/clBackgroundView">
 
         <FrameLayout
