--- a/app/src/main/res/layout-night/item_notification.xml
+++ b/app/src/main/res/layout-night/item_notification.xml
@@ -12,7 +12,7 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/notification_parent_card"
-        style="@style/Card"
+        style="@style/Card.Item"
         app:cardBackgroundColor="?attr/clBackgroundView">
 
         <LinearLayout
