--- a/app/src/main/res/layout/inc_toolbar_rank.xml
+++ b/app/src/main/res/layout/inc_toolbar_rank.xml
@@ -11,11 +11,7 @@
         <variable name="isAddEnable" type="boolean"/>
     </data>
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:elevation="@dimen/elevation_8dp"
-        android:stateListAnimator="@null">
+    <com.google.android.material.appbar.AppBarLayout style="@style/Toolbar.Fix">
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar_rank_container"
