--- a/app/src/main/res/values-sw600dp/dimens_device.xml
+++ b/app/src/main/res/values-sw600dp/dimens_device.xml
@@ -13,4 +13,6 @@
     <dimen name="recycler_vertical_margin">6dp</dimen> <!--2dp-->
     <dimen name="recycler_horizontal_margin">8dp</dimen> <!--8dp-->
 
+    <dimen name="toolbar_elevation">8dp</dimen>
+
 </resources>
