--- a/app/src/main/res/values/dimens_device.xml
+++ b/app/src/main/res/values/dimens_device.xml
@@ -13,4 +13,6 @@
     <dimen name="recycler_vertical_margin">4dp</dimen>
     <dimen name="recycler_horizontal_margin">0dp</dimen>
 
+    <dimen name="toolbar_elevation">8dp</dimen>
+
 </resources>
