--- a/app/src/main/res/values/styles_element.xml
+++ b/app/src/main/res/values/styles_element.xml
@@ -409,12 +409,31 @@
 
     <!-- ProgressBar -->
 
-    <style name="ProgressBar"/>
+    <style name="ProgressBar" />
 
     <style name="ProgressBar.Develop">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_gravity">center</item>
+    </style>
+
+    <!--  Toolbar  -->
+
+    <style name="Toolbar" />
+
+    <style name="Toolbar.Flex">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:minHeight">?attr/actionBarSize</item>
+        <item name="android:elevation">@dimen/toolbar_elevation</item>
+        <item name="android:stateListAnimator">@null</item>
+    </style>
+
+    <style name="Toolbar.Fix">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">?attr/actionBarSize</item>
+        <item name="android:elevation">@dimen/toolbar_elevation</item>
+        <item name="android:stateListAnimator">@null</item>
     </style>
 
 </resources>
