Add inc_info.xml support for all screen sizes

--- a/app/src/main/res/layout-night/inc_toolbar_note.xml
+++ b/app/src/main/res/layout-night/inc_toolbar_note.xml
@@ -33,7 +33,7 @@
 
         <View
             android:id="@+id/toolbar_note_color_view"
-            style="@style/Image.Color.Horizontal"
+            style="@style/View.Color.Horizontal"
             tools:background="@color/note_red_dark" />
 
     </com.google.android.material.appbar.AppBarLayout>
