--- a/app/src/main/res/layout/inc_toolbar_note.xml
+++ b/app/src/main/res/layout/inc_toolbar_note.xml
@@ -33,7 +33,7 @@
 
         <View
             android:id="@+id/toolbar_note_color_view"
-            style="@style/Image.Color.Horizontal"
+            style="@style/View.Color.Horizontal"
             android:visibility="gone" />
 
     </com.google.android.material.appbar.AppBarLayout>
