--- a/app/src/main/res/layout/item_note_roll.xml
+++ b/app/src/main/res/layout/item_note_roll.xml
@@ -30,7 +30,7 @@
 
                 <View
                     android:id="@+id/note_roll_color_view"
-                    style="@style/Image.Color.Vertical.End"
+                    style="@style/View.Color.Vertical.End"
                     android:importantForAccessibility="no"
                     android:visibility="gone" />
 
