--- a/app/src/main/res/values-sw720dp/dimens_device.xml
+++ b/app/src/main/res/values-sw720dp/dimens_device.xml
@@ -1,18 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <dimen name="item_card_horizontal_margin">12dp</dimen> <!--2dp-->
-    <dimen name="item_card_vertical_margin">5dp</dimen> <!--0.5dp-->
-    <dimen name="item_card_elevation">3dp</dimen> <!--0.5dp-->
-    <dimen name="item_card_radius">6dp</dimen> <!--1dp-->
+    <dimen name="item_card_horizontal_margin">12dp</dimen> <!--4dp-->
+    <dimen name="item_card_vertical_margin">5dp</dimen> <!--1dp-->
+    <dimen name="item_card_elevation">3dp</dimen> <!--1dp-->
+    <dimen name="item_card_radius">6dp</dimen> <!--2dp-->
 
     <dimen name="text_note_card_margin">12dp</dimen> <!--2dp-->
-    <dimen name="text_note_card_elevation">3dp</dimen> <!--0.5dp-->
-    <dimen name="text_note_card_radius">6dp</dimen> <!--1dp-->
+    <dimen name="text_note_card_elevation">3dp</dimen> <!--1dp-->
+    <dimen name="text_note_card_radius">6dp</dimen> <!--2dp-->
 
-    <dimen name="recycler_vertical_margin">8dp</dimen> <!--2dp-->
-    <dimen name="recycler_horizontal_margin">12dp</dimen> <!--8dp-4dp-->
+    <dimen name="recycler_vertical_margin">8dp</dimen> <!--4dp-->
+    <dimen name="recycler_horizontal_margin">12dp</dimen> <!--12dp-->
 
-    <dimen name="toolbar_elevation">8dp</dimen>
+    <dimen name="toolbar_elevation">9dp</dimen> <!--1dp-->
+
+    <dimen name="color_vertical_size">8dp</dimen> <!--TODO-->
+    <dimen name="color_vertical_space">8dp</dimen> <!--TODO-->
+    <dimen name="color_horizontal_size">8dp</dimen> <!--4dp-->
+
+    <dimen name="info_icon_size">180dp</dimen> <!--52dp-->
+    <dimen name="info_content_bottom_space">16dp</dimen> <!--8dp-->
+    <dimen name="info_title_text">22sp</dimen> <!--4sp-->
+    <dimen name="info_title_inside_space">8dp</dimen> <!--4dp-->
+    <dimen name="info_details_text">18sp</dimen> <!--4sp-->
+    <dimen name="info_details_horizontal_inside_space">32dp</dimen> <!--16dp-->
+    <dimen name="info_details_vertical_inside_space">8dp</dimen> <!--4dp-->
 
 </resources>
